--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <h2 class="section-title">Notre Blog</h2>
             <div class="blog-grid">
                 <div class="blog-card">
-                    <img src="https://images.unsplash.com/photo-1501785888040-7cefe7a6bbd6?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1000&q=80" alt="Destination 1">
+                    <img src="Les trésors cachés de Moundou.png">
                     <h3>Les trésors cachés de Moundou</h3>
                     <p>Découvrez les endroits secrets que seul les locaux connaissent.</p>
                     <a href="#" class="read-more">Lire plus</a>
